--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <aside class="sidebar">
               <h2 class="section-title">All posts</h2>
               <ul class="list titles">
+                <button id="button-test">test</button>
                 <li><a href="#article-1" class="active"><span>Article 1</span></a></li>
                 <li><a href="#article-2"><span>Article 2</span></a></li>
                 <li><a href="#article-3"><span>Article 3</span></a></li>
@@ -230,4 +231,5 @@
         </div>
       </div>
 </body>
+<script src="js/script.js"></script>
 </html>
