--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
   </script>
   <script id="template-tag-link" type="text/x-handlebars-template">
-    <li><a href="#tag-{{ tag }}" class="{${calculateTagClass(allTags[tag], tagsParams)}}">{{ title }}</a></li>
+    <li><a href="#tag-{{ tag }}" class="">{{ title }}</a></li>
   </script>
   <script id="template-tag-cloud-link" type="text/x-handlebars-template">
     {{#each tags}}
@@ -175,7 +175,7 @@
   </script>
 <script id="template-author-cloud-link" type="text/x-handlebars-template">
   {{#each authors}}
-  <li><a href="#tag-{{link}}" class="{{className}}">{{linkName}}</a></li>
+  <li><a href="{{link}}" class="{{className}}">{{linkName}}</a></li>
   {{/each}}
 </script>  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>    
